:tada: added /api/post/[id] route
